# asd-examples

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.claude/agents/: systemverilog-formatter.md
examples/axis_skid_buffer/rtl/: axis_skid_buffer.sv  axis_skid_buffer.toml
examples/axis_skid_buffer/sim/: sim_axis_skid_buffer.py
examples/counter/rtl/: counter.sv  counter.toml
examples/counter/sim/: sim_counter.py
